packages/typ/tests/fixtures/diagnostics/0393_exception_constructor_arg_mismatch_09.ml.expected
File "0393_exception_constructor_arg_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0393_exception_constructor_arg_mismatch_09 is not a valid module name.

File "0393_exception_constructor_arg_mismatch_09.ml", line 2, characters 15-19:
2 | let _ = E_iota true
                   ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
